Update to Java 11